V 
* features
- 
* bug fixes
- 
V 
* features
- move capability check to settings/system
* bug fixes
- fix power consumption display  
- fix error in capability check

V 1.0.1
* features
- 
* bug fixes
- decreased memory footprint

V 1.0.0
* features
- go back to previous service state  (beta feature)
- new default profiles (governor thresholds are non power user now)
- save and cancel for editors
- hide keyboard in editors
- hot state non beta
* bug fixes
- fix finding trigger 
- profile editor discards changes on change
* internal -----------------------
- remove old receiver interface
- make powerprofiles singleton class

V 0.16.0
* features
- Setting for minimum displayed frequency
- Battery hot state (beta)
- Check capabilities progress dialog
* bug fixes
- 

V 0.15.1
* features
- 
* bug fixes
- fix check information
- sort cpu frequencies

V 0.15.0
* features
- find possibly more frequencies (from cpuinfo)
- make power consumption calculation configurable
- restore default settings
* bug fixes
- 

V 0.14.1
* features
- 
* bug fixes
- fix fc in toast generation

V  0.14.0
* features
- manual service handling (non beta now)
- make service use a background task to switch profile (non beta now)
- better capability check
- buy me a beer
* bug fixes
-

V 0.13.0
* features
- make service use a background task to switch profile (beta feature)
- help navigation
- more help information
* bug fixes
- fix no profile on start
- use power user mode for capability check
- use current now for power consumption calculation
- check developer id before suggesting cyanogenmod
- layout fixes

V 0.12.0
* features
- only switch service if not changed manually within the same trigger (beta feature)
- show active trigger and profile in list
* bug fixes
- hide power usage if files not accessible
- fixes

V 0.11.4
* features
- dialog for mail subject and body
- help: links
* bug fixes
- fix finding trigger (crazy profiles bug)
- moved next best trigger to beta

V 0.11.3
* features