@@ -2,26 +2,38 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
-<link rel="stylesheet" href="styles.css"/>
+<link rel="stylesheet" href="styles.css" />
 <title>profiles</title>
 </head>
-<body>	
-	<span class="headline">profiles</span>
-	<br/><br/>
-	<span class="text">Profiles are systemwide settings that are applied by <a href="trigger.html">triggers</a>.</span>
-	<span class="text">At the moment (v. 1.0) there's two categories, you can adjust:
-		<ul>
-			<li><span class="bold">CPU settings</span><br/>
-			These settings determine the CPU's clockspeed ("how fast it is") and power consumption.
-			</li>
-			<li><span class="bold">services</span><br/>
-			These settings can toggle some system services on and/or off.<br/>
-			As said in <a href="battery_drainer.html">battery drainers</a> it's wise to disable syncing, wifi, etc. on some states.<br/>
-			You can <span class="bold">leave [the service in question] unchanged</span>, but you may as well <span class="bold">enable</span> or <span class="bold">disable</span> services with triggers.<br/>
-			If you manually override these settings, e.g. cause CPU tuner disables sync at 20% battery, but you need to sync you calendar with Google, this setting will stay untouched by CPU tuner unless a new trigger is activated and modifies the service's state. 
-			</li>
-		</ul>
-	</span>
+<body>
+<span class="headline">profiles</span>
+<br />
+<br />
+<span class="text">Profiles are systemwide settings that are
+applied by <a href="trigger.html">triggers</a>.</span>
+<span class="text">At the moment (v. 1.0) there's two categories,
+you can adjust:
+<ul>
+	<li><span class="bold">CPU settings</span><br />
+	These settings determine the CPU's clockspeed ("how fast it is") and
+	power consumption.</li>
+	<li><span class="bold">services</span><br />
+	These settings can toggle some system services on and/or off.<br />
+	As said in <a href="battery_drainer.html">battery drainers</a> it's
+	wise to disable syncing, wifi, etc. on some states.<br />
+	You can <span class="bold">leave [the service in question]
+	unchanged</span>, but you may as well <span class="bold">enable</span> or 
+	<span class="bold">disable</span> services with triggers, additionally you can
+	go <span class="bold">back to [the] previous</span> state which activates the state 
+	the service was in before the last switch.
+		
+		<br />
+	If you manually override these settings, e.g. cause CPU tuner disables
+	sync at 20% battery, but you need to sync you calendar with Google,
+	this setting will stay untouched by CPU tuner unless a new trigger is
+	activated and modifies the service's state.</li>
+</ul>
+</span>
 </body>
 </html>
 <!-- created by Michael "unrest" Lenz, Dec 16th 2010 -->
