@@ -137,6 +137,7 @@
 		<item>leave unchanged</item>
 		<item>Enable</item>
 		<item>Disable</item>
+		<item>Back to previous</item>
 	</string-array>
 	<string-array name="deviceStatesBeta">
 		<item>leave unchanged</item>
@@ -148,6 +149,7 @@
 		<item>leave unchanged</item>
 		<item>2G only</item>
 		<item>3G/2G</item>
+		<item>Back to previous</item>
 	</string-array>
 	<string-array name="mobiledataStatesBeta">
 		<item>leave unchanged</item>
